--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.15.2",
     "@mantine/core": "^7.15.2",
     "@mantine/form": "^7.15.2",
     "@mantine/hooks": "^7.15.2",
-    "next": "15.1.2",
+    "embla-carousel-react": "^8.5.1",
+    "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
