--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.15.2",
     "@mantine/hooks": "^7.15.2",
     "embla-carousel-react": "^8.5.1",
+    "lucide-react": "^0.471.1",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
