--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@mantine/core": "^7.15.2",
     "@mantine/form": "^7.15.2",
     "@mantine/hooks": "^7.15.2",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.471.1",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
