--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.471.1",
     "next": "^15.1.5",
     "next-auth": "^4.24.11",
@@ -23,6 +24,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
